--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "next": "15.5.3",
     "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
